Fixed issue with hidden drawer showing on scroll on iPhone.

--- a/src/less/drawer.less
+++ b/src/less/drawer.less
@@ -2,7 +2,7 @@
   @drawerHeight: 95vh;
   position: fixed;
   height: @drawerHeight;
-  top: -100%;
+  top: -150%;
   left: 0;
   right: 0;
   z-index: 6000;
@@ -13,7 +13,7 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  transition: top 0.5s ease;
+  transition: top 0.7s ease;
   box-shadow: 0 3px 7px @color-dark75;
   &.isActive {
     top: 0;
